analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/destructuringTopLevel2.kt
val (e) =

<expr>object {}</expr>